--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
                 </div>
                 <div class="link-nav">
-                    <ul>
+                    
+                    <ul class="lista-nav">
                         <li><a href="">Scarica</a> </li>
                         <li><a href=""> Perché Discord</a></li>
                         <li><a href="">Nitro</a></li>
@@ -35,7 +36,17 @@
 
             </nav>
           <div class="hero">
-
+              <h1>IMMAGINA UNO SPAZIO...</h1>
+              <p>
+                ... dove far parte di un club scolastico, un gruppo di gamer, una community artistica mondiale o dove trascorrere tempo assieme a un piccolo gruppo di amici: uno spazio in cui è più facile chiacchierare ogni giorno e ritrovarsi più spesso.
+              </p>
+              <button type="button">
+                  Scarica per Windows
+              </button>
+              <button type="button">
+                Apri Discord nel tuo browser
+            </button>
+             
           </div>
         </header>
     </body>
