--- a/index.html
+++ b/index.html
@@ -41,11 +41,12 @@
                 ... dove far parte di un club scolastico, un gruppo di gamer, una community artistica mondiale o dove trascorrere tempo assieme a un piccolo gruppo di amici: uno spazio in cui è più facile chiacchierare ogni giorno e ritrovarsi più spesso.
               </p>
               <button type="button">
+                <i class="fas fa-long-arrow-alt-down"></i>
                   Scarica per Windows
               </button>
               <button type="button">
                 Apri Discord nel tuo browser
-            </button>
+             </button>
              
           </div>
         </header>
